@@ -8,6 +8,7 @@ import java.io.File;
 import java.io.IOException;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static systems.intino.alexandria.datamarts.subjectmap.model.Subject.Any;
 
 @SuppressWarnings("NewClassNamingConvention")
 public class SubjectIndex_ {
@@ -26,12 +27,12 @@ public class SubjectIndex_ {
 	}
 
 	private static void check(SubjectIndex index) {
-		assertThat(index.subjects().roots().serialize()).isEqualTo("11.o");
-		assertThat(index.subjects().with("name", "jose").roots().serialize()).isEqualTo("11.o");
-		assertThat(index.subjects().without("name", "jose").roots().serialize()).isEqualTo("");
-		assertThat(index.subjects().without("name", "mario").roots().serialize()).isEqualTo("11.o");
-		assertThat(index.subjects().without("name", "mario").roots().filter(a -> a.is("o")).serialize()).isEqualTo("11.o");
-		assertThat(index.subjects().without("name", "mario").roots().filter(a -> a.is("user")).serialize()).isEqualTo("");
+		assertThat(index.subjects(Any).roots().serialize()).isEqualTo("11.o");
+		assertThat(index.subjects(Any).with("name", "jose").roots().serialize()).isEqualTo("11.o");
+		assertThat(index.subjects(Any).without("name", "jose").roots().serialize()).isEqualTo("");
+		assertThat(index.subjects(Any).without("name", "mario").roots().serialize()).isEqualTo("11.o");
+		assertThat(index.subjects(Any).without("name", "mario").roots().filter(a -> a.is("o")).serialize()).isEqualTo("11.o");
+		assertThat(index.subjects(Any).without("name", "mario").roots().filter(a -> a.is("user")).serialize()).isEqualTo("");
 	}
 
 	@Test
@@ -60,9 +61,9 @@ public class SubjectIndex_ {
 			index.on("11.o/22.p").set("value", "2").commit();
 			index.on("11.o/22.p/33.q").set("value", "3").commit();
 
-			assertThat(index.subjects().roots().size()).isEqualTo(1);
-			assertThat(index.subjects().roots().get(0)).isEqualTo(Subject.of("11.o"));
-			assertThat(index.subjects().roots().get(0).children().getFirst()).isEqualTo(Subject.of("11.o/22.p"));
+			assertThat(index.subjects(Any).roots().size()).isEqualTo(1);
+			assertThat(index.subjects(Any).roots().get(0)).isEqualTo(Subject.of("11.o"));
+			assertThat(index.subjects(Any).roots().get(0).children().getFirst()).isEqualTo(Subject.of("11.o/22.p"));
 			assertThat(index.get("11.o").isNull()).isFalse();
 			assertThat(index.get("11.o").parent().isNull()).isTrue();
 			assertThat(index.get("12.o").isNull()).isTrue();
@@ -70,8 +71,12 @@ public class SubjectIndex_ {
 			assertThat(index.get("11.o/22.p").children()).containsExactly(index.get("11.o/22.p/33.q"));
 			assertThat(index.get("11.o/22.p").children().getFirst().path()).isEqualTo("11.o/22.p/33.q");
 			assertThat(index.get("11.o/22.p/33.q").parent().parent()).isEqualTo(Subject.of("11.o"));
-			assertThat(index.subjects().with("value", "1").roots().size()).isEqualTo(1);
-			assertThat(index.subjects().with("value", "2").roots().size()).isEqualTo(0);
+			assertThat(index.subjects(Any).with("value", "1").roots().size()).isEqualTo(1);
+			assertThat(index.subjects("o").with("value", "1").roots().size()).isEqualTo(1);
+			assertThat(index.subjects("p").with("value", "1").roots().size()).isEqualTo(0);
+			assertThat(index.subjects("p").with("value", "2").all().size()).isEqualTo(1);
+			assertThat(index.subjects("p").with("value", "2").all().get(0)).isEqualTo(Subject.of("11.o/22.p"));
+			assertThat(index.subjects(Any).with("value", "2").roots().isEmpty()).isTrue();
 		}
 	}
 
@@ -88,10 +93,10 @@ public class SubjectIndex_ {
 					.set("team", "first")
 					.commit();
 			index.drop("11.o");
-			assertThat(index.subjects().roots().serialize()).isEqualTo("22.o");
+			assertThat(index.subjects(Any).roots().serialize()).isEqualTo("22.o");
 		}
 		try (SubjectIndex index = new SubjectIndex(file)) {
-			assertThat(index.subjects().roots().serialize()).isEqualTo("22.o");
+			assertThat(index.subjects(Any).roots().serialize()).isEqualTo("22.o");
 		}
 	}
 
@@ -111,13 +116,13 @@ public class SubjectIndex_ {
 			index.on("654321.model")
 				.unset("t","simulation")
 				.commit();
-			assertThat(index.subjects().roots().serialize()).isEqualTo("123456.model\n654321.model");
-			assertThat(index.subjects().roots().serialize()).isEqualTo("123456.model\n654321.model");
-			assertThat(index.subjects().with("user","mcaballero@gmail.com").roots().serialize()).isEqualTo("123456.model\n654321.model");
-			assertThat(index.subjects().with("description","simulation").roots().serialize()).isEqualTo("123456.model");
-			assertThat(index.subjects().with("user", "josejuan@gmail.com").roots().serialize()).isEqualTo("654321.model");
-			assertThat(index.subjects().without("description","simulation").roots().serialize()).isEqualTo("654321.model");
-			assertThat(index.subjects().without("user", "josejuan@gmail.com").roots().serialize()).isEqualTo("123456.model");
+			assertThat(index.subjects(Any).roots().serialize()).isEqualTo("123456.model\n654321.model");
+			assertThat(index.subjects(Any).roots().serialize()).isEqualTo("123456.model\n654321.model");
+			assertThat(index.subjects(Any).with("user","mcaballero@gmail.com").roots().serialize()).isEqualTo("123456.model\n654321.model");
+			assertThat(index.subjects(Any).with("description","simulation").roots().serialize()).isEqualTo("123456.model");
+			assertThat(index.subjects(Any).with("user", "josejuan@gmail.com").roots().serialize()).isEqualTo("654321.model");
+			assertThat(index.subjects(Any).without("description","simulation").roots().serialize()).isEqualTo("654321.model");
+			assertThat(index.subjects(Any).without("user", "josejuan@gmail.com").roots().serialize()).isEqualTo("123456.model");
 		}
 	}
 
@@ -162,12 +167,12 @@ public class SubjectIndex_ {
 			index.on("123456.model")
 					.unset("team", "ulpgc")
 					.commit();
-			assertThat(index.subjects().where("description", "user").contains("gmail").serialize()).isEqualTo("123456.model");
-			assertThat(index.subjects().where("description").contains("sim").serialize()).isEqualTo("123456.model");
-			assertThat(index.subjects().where("description").contains("xxx").serialize()).isEqualTo("");
-			assertThat(index.subjects().where("team").contains("ulpgc").serialize()).isEqualTo("");
-			assertThat(index.subjects().where("access").matches("jose@gmail.com").serialize()).isEqualTo("");
-			assertThat(index.subjects().where("access").matches("jose@ulpgc.es").serialize()).isEqualTo("123456.model");
+			assertThat(index.subjects(Any).where("description", "user").contains("gmail").serialize()).isEqualTo("123456.model");
+			assertThat(index.subjects(Any).where("description").contains("sim").serialize()).isEqualTo("123456.model");
+			assertThat(index.subjects(Any).where("description").contains("xxx").serialize()).isEqualTo("");
+			assertThat(index.subjects(Any).where("team").contains("ulpgc").serialize()).isEqualTo("");
+			assertThat(index.subjects(Any).where("access").matches("jose@gmail.com").serialize()).isEqualTo("");
+			assertThat(index.subjects(Any).where("access").matches("jose@ulpgc.es").serialize()).isEqualTo("123456.model");
 		}
 	}
 }
